force-app/main/default/objects/Advertising_Campaign__c/Advertising_Campaign__c.object-meta.xml
<CustomObject>
    <label>Advertising Campaign</label>
    <nameField>
        <label>Advertising Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advertising Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>