force-app/main/default/objects/Advertising_Campaign__c/fields/Amount_spent_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_spent_USD__c</fullName>
    <label>Amount spent (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>