force-app/main/default/objects/Advertising_Campaign__c/fields/Clicks_all__c.field-meta.xml
<CustomField>
    <fullName>Clicks_all__c</fullName>
    <label>Clicks (all)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>