force-app/main/default/objects/Advertising_Campaign__c/fields/Cost_per_1000_people_reached__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_1000_people_reached__c</fullName>
    <label>Cost per 1000 people reached</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>