force-app/main/default/objects/Advertising_Campaign__c/fields/CPC_all__c.field-meta.xml
<CustomField>
    <fullName>CPC_all__c</fullName>
    <label>CPC (all)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>